# qrcodegenerator

./: CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
qr/: QRCodeGenerator.cpp  QRCodeGenerator.h
qr/correction/: ErrorCorrection.cpp  ErrorCorrection.h
qr/encoding/: AlphanumbericEncoder.cpp  AlphanumbericEncoder.h  ByteEncoder.cpp  ByteEncoder.h  DataAnalizer.cpp  DataAnalizer.h  EncodingHelper.cpp  EncodingHelper.h  IEncoder.h  NumberEncoder.cpp  NumberEncoder.h
qr/masking/: IMaskPattern.cpp  IMaskPattern.h  Mask.h  Masker.cpp  Masker.h  masks.h
qr/utils/: BlockRange.h  ByteArray.cpp  ByteArray.h  Configuration.cpp  Configuration.h  LogFormatter.cpp  LogFormatter.h  ModuleMatrix.cpp  ModuleMatrix.h  QrException.h  simple_svg_1.0.0.hpp
qr/visualization/: IVisualizer.h  SvgVisualizer.cpp  SvgVisualizer.h
